     possible to obtain the password from preferences, but it's no longer as
     trivial as before.
   * Fixed crash when loading a replay stored on the server (Bug #1762)
   * Fixed delay or clients gettings stuck when starting a mp game (Bug #1674)
 * Performance:
   * Rewrote the FPS cap implementation. This greatly improves smoothness ingame.
   * Implemented GUI canvas caching. It speeds up multiple areas, but especially
     the story screen.
 * Units:
   * Added new lvl0 Giant Scorpling, leveling into the Giant Scorpion.
 * User Interface:
   * Unit recall dialog now sorts the units by both level and required XP for
     their next level-up (issue #1738).
   * Enable the use of tab to switch between text fields in most dialogs.
   * Color-code modifiers in trait tooltips
   * Translation teams in credits are now listed in alphabetical order of the
     localized language name (rather than the English language name).
   * Allow deleting saves with the Delete key in the Load dialog.
   * Fixed team selection screen often ignoring attempts to scroll (bug #1632).
   * Input Method Editor support in most textboxes (except in-game chat)
   * Campaign dialog now uses different-coloured victory wreaths depending on
     the difficulty you beat the campaign on
   * Campaign dialog can now be sorted in alphabetical or chronological order
   * Fixed a number of issues with hotkeys
   * Fixed the viewport being moved when changing the zoom level
   * Fixed an occasional interface hang where only the menus work
 * Miscellaneous and Bug Fixes:
   * Add --report/-R command line switch for printing the same report from the
     Game Version dialog's clipboard function to stdout.
   * On GNU/Linux the game no longer minimizes when it loses focus in fullscreen mode
     (bug #1606)
   * Fixed whiteboard crash on delete action with multiple moves (bug #1842)
   * Fix units beeing unable to step on hexes with too high movecosts (bug #1473) 
 * WFL Engine