@@ -52,6 +52,8 @@ Version 1.13.8+dev:
    * Fixed delay or clients gettings stuck when starting a mp game (Bug #1674)
  * Performance:
    * Rewrote the FPS cap implementation. This greatly improves smoothness ingame.
+   * Each invalidated hex is now only redrawn once, not twice. This almost halves CPU
+     usage ingame.
    * Implemented GUI canvas caching. It speeds up multiple areas, but especially
      the story screen.
  * Units:
